clusters/core-ci/test-harness-operator/admin_rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: Test harness operator and UI
    openshift.io/display-name: Test Harness
  name: test-harness
